fix5 8-contact-us gap tab

--- a/src/css/8-contact-us.css
+++ b/src/css/8-contact-us.css
@@ -20,7 +20,7 @@
   gap: 20px;
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 768px) {
   .contact-div-common {
     flex-direction: row;
     gap: 40px;
